--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Todo List</h1>
+    <div class="container">
+        <h1>To-Do List</h1>
+        <input type="text" id="taskInput" placeholder="Enter a new task">
+        <button onclick="addtask()">Add Task</button>
+        <ul id="taskList"></ul>
+    </div>
 </body>
 </html>
