Added and linked the js file

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <button onclick="addtask()">Add Task</button>
         <ul id="taskList"></ul>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
