--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 style="color: black;">67-The DOM: Adding Nodes</h1>
     <div class="container">
         <h1>To-Do List</h1>
         <input type="text" id="taskInput" placeholder="Enter a new task">
-        <button onclick="addtask()">Add Task</button>
+        <button onclick="addTask()">Add Todo</button>
         <ul id="taskList"></ul>
     </div>
     <script src="./script.js"></script>
